<resources>
    <string name="app_name">SOPO-19</string>
    <string name="welcome_text">WELCOME TO</string>
    <string name="hintEmail">Silahkan Masukkan Email</string>
    <string name="hintPassword">Silahkan Masukkan Password</string>
    <string name="hintNomer">Silahkan Masukkan No HP</string>
    <string name="btnMasuk">MASUK</string>
    <string name="btnDaftar">DAFTAR</string>
    <string name="title_activity_apd_tersedia">Portal Data APD</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="apd_lbl">KETERSEDIAAN APD</string>
    <string name="selengkapnya">.....</string>
    <string name="kiri_judul">Data Perkembangan Kasus Covid-19 di Indonesia</string>
    <string name="total_lbl">POSITIF</string>
    <string name="konfirm_lbl">TERKONFIRMASI</string>
    <string name="sembuh_lbl">SEMBUH</string>
    <string name="meninggal_lbl">MENINGGAL</string>
    <string name="rawat_lbl">DIRAWAT</string>>
</resources>
