<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg1"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="DAFTAR"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textColor="@color/colorPutih"
        android:gravity="center_horizontal" />

    <EditText
    android:id="@+id/txtDEmail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
    android:layout_marginTop="130dp"
        android:width="400dp"
        android:textColor="@color/colorPutih"
    android:ems="10"
    android:hint="@string/hintEmail"
    android:inputType="textEmailAddress" />

    <EditText
    android:id="@+id/txtDPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="180dp"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
        android:width="400dp"
    android:ems="10"
        android:textColor="@color/colorPutih"
    android:hint="@string/hintPassword"
    android:inputType="textPassword" />

    <EditText
    android:id="@+id/txtDNohp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="230dp"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
        android:width="400dp"
        android:textColor="@color/colorPutih"
    android:ems="10"
    android:hint="@string/hintNomer"
    android:inputType="phone" />

    <Button
    android:id="@+id/btnDMasuk"
    android:layout_width="90dp"
    android:layout_height="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="380dp"
        android:background="@color/colorPutih"
        android:textColor="@color/colorBG"
    android:text="@string/btnMasuk" />

    <Button
    android:id="@+id/btnDDaftar"
    android:layout_width="90dp"
    android:layout_height="30dp"
    android:layout_marginLeft="280dp"
    android:layout_marginTop="280dp"
        android:background="@color/colorPutih"
        android:textColor="@color/colorBG"
    android:text="@string/btnDaftar" />
</RelativeLayout>