<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.KiriFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp"
    >


    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kiri_judul"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textSize="26dp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_lbl"
        android:textSize="24dp"
        android:id="@id/tv_total"
        android:layout_below="@id/textview_first"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="000000"
        android:textSize="24dp"
        android:id="@id/isi_tv_total"
        android:layout_below="@id/tv_total"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sembuh_lbl"
        android:textSize="24dp"
        android:id="@id/tv_sembuh"
        android:layout_below="@id/isi_tv_total"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="000000"
        android:textSize="24dp"
        android:id="@id/isi_tv_sembuh"
        android:layout_below="@id/tv_sembuh"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rawat_lbl"
        android:textSize="24dp"
        android:id="@id/tv_rawat"
        android:layout_below="@id/isi_tv_sembuh"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="000000"
        android:textSize="24dp"
        android:id="@id/isi_tv_rawat"
        android:layout_below="@id/tv_rawat"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meninggal_lbl"
        android:textSize="24dp"
        android:id="@id/tv_meninggal"
        android:layout_below="@id/isi_tv_rawat"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="000000"
        android:textSize="24dp"
        android:id="@id/isi_tv_meninggal"
        android:layout_below="@id/tv_meninggal"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

</RelativeLayout>

</RelativeLayout>